k8s/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - grafana.3.64.180.31.sslip.io
      secretName: grafana-tls-secret
  rules:
    - host: grafana.3.64.180.31.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prom-stack-grafana
                port:
                  number: 80
